Change Maven SDK tutorial body for 4.0. Comment in the maven assembly plugin to produce an AMP